style.css
body {
    margin: 0px;
    width: 100%;
    background-color: rgb(25, 24, 24);

}

* {
    box-sizing: border-box;
}

#curtain {
    width: 100vw;
    height: 100vh;
    display: flex;
   
    

    /* background-repeat: no-repeat;
    background-size: 100% 100%;
    background-color: rgb(40, 39, 39); */

}

#curtain img{

    width: 100%;
    height: 100%;
    transition-property: opacity;
    position: absolute;
   
    
    

}

.slideUpAnimation {
    transition-duration: 5s;
    position: absolute;
    z-index: 5;
    transform: translateY(-100%);
}

.fadeInAnimation{
    opacity: 100%;
    transition-duration: 3s;
    
}

.fadeOutAnimation{
    opacity: 0%;
    transition-duration: 3s;
    
}







#mainPage {
    display: none;

}

#header {

    border: solid black 2px;
    width: 100%;
    display: flex;
    height: 150px;
    background-color: black;
    align-items: center;
    padding-left: 30px;
    padding-right: 30px;
    margin-bottom: 40px;

}


#header img {
    height: 80%;
}

#logo {
    margin-left: auto;
    /* margin-right: 5%; */
}

/* "choose your fighter text" */
.titleText {
    font-family: MajestyBold, Times New Roman, serif;
    color: white;
    text-align: center;
    font-size: 100px;
    margin: 0px;
    margin-bottom: 30px;
}


/* Div that will open up to showcase the variations */
#currentDisplay {
    display: none;
}


/* navbar used to select between base game or dlc characters */
#navbar {
    width: 80%;
    display: flex;
    justify-content: space-around;
    align-items: center;
    margin-left: auto;
    margin-right: auto;
    height: 50px;
    border: solid purple 2px;
    margin-bottom: 30px;
}

.navbarText {
    margin: 0px;
    color: white;
    border: solid red 2px;

}

/* grid that actaully holds charactert cards */
#characterGrid {

    width: 95vw;
    margin-left: auto;
    margin-right: auto;
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-template-rows: repeat(4, 1fr);
    row-gap: 20px;
    column-gap: 10px;
    


}

/* each card in the grid */
.card {
    grid-column: span 1;
    grid-row: span 1;
    aspect-ratio: 1;
    background-image: linear-gradient(rgb(59, 58, 58), rgb(10, 9, 9));
    background-repeat: no-repeat;
    background-size: 100% 100%;
    display: flex;
    justify-content: center;
    align-items: flex-end;
    object-fit: contain;
    position: relative;
    overflow: hidden;
    border: 1px solid lightblue;


}


.card img {
    height: 100%;
    position: absolute;
    z-index: 1;
}


.cardNameText {
    margin: 0px;
    color: rgb(210, 13, 13);
    margin-bottom: 10%;
    z-index: 2;

}

